@@ -1,3 +1,8 @@
+2006-04-26  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* help/C/baobab.xml: fixed figures
+	* src/callbacks.c: (trash_dir_cb): fixed monitor logic
+
 2006-04-21  Paolo Borelli  <pborelli@katamail.com>
 
 	* data/baobab.glade:
